@@ -15,12 +15,13 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 public class SecurityFilter extends OncePerRequestFilter {
@@ -37,7 +38,10 @@ public class SecurityFilter extends OncePerRequestFilter {
         if (token != null) {
             var subject = tokenService.validarToken(token);
             if (!subject.isEmpty()) {
-                var authentication = new UsernamePasswordAuthenticationToken(subject, null, Collections.emptyList());
+                var perfil = tokenService.extrairPerfil(token);
+                var authority = new SimpleGrantedAuthority("ROLE_" + perfil);
+                
+                var authentication = new UsernamePasswordAuthenticationToken(subject, null, List.of(authority));
                 SecurityContextHolder.getContext().setAuthentication(authentication);
             }
         }
